# komashal-django

./: .gitignore  manage.py  pyproject.toml
backend/: admin.py  api.py  models.py  serializers.py  urls.py
backend/migrations/: 0001_initial.py  0002_rename_token_coupon_token_cart_status_and_more.py  0003_remove_address_alt_phone_remove_address_first_name_and_more.py  0004_alter_pickupstation_name.py  0005_rename_user_id_cart_user_and_more.py  0006_profile_first_name_profile_last_name.py  0007_alter_profile_first_name_alter_profile_last_name_and_more.py
frontend/: package-lock.json  package.json  urls.py  webpack.config.js
frontend/src/: index.js
frontend/static/frontend/: main.js
komashal/: asgi.py  settings.py  urls.py  wsgi.py
